Presentation and experience configuration

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,22 @@ import LinkedInIcon from "../icons/LinkedIn.astro";
 import GitHubIcon from "../icons/GitHub.astro";
 import Layout from "../layouts/Layout.astro";
 import MailIcon from "../icons/Mail.astro";
+import SocialButton from "../components/SocialButton.astro";
+import ExperienceCard from "../components/ExperienceCard.astro";
+import Experience from "../components/Experience.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-  <section class="w-full mx-auto lg:w-[740px] py-44">
+<Layout
+  title="Eric Diaz's Portfolio - Full-Stack Web Developer"
+  description="If you are looking for a full-stack and highly dedicated web developer to build your next project  or just want to say hi , you've come to the right place."
+>
+  <section class="py-40 w-full mx-auto lg:w-[740px]">
     <main>
+      <img
+        class="rounded-full size-24 mb-5"
+        src="https://avatars.githubusercontent.com/u/91031571?s=400&u=384c47896fa89b09d88ecd3042b4cc893dd07aea&v=4"
+        alt="Eric photo"
+      />
       <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-4">
         Hi, I'm Eric! <a
           href="https://www.linkedin.com/in/eric-diaz-euka/"
@@ -24,31 +35,20 @@ import MailIcon from "../icons/Mail.astro";
         Technologies 🛠️
       </h2>
       <nav class="flex flex-row gap-x-3 pt-4 mt-4">
-        <a
-          target="_blank"
-          rel="noopener noreferrer"
-          class="rounded-xl border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:scale-110 hover:bg-white/10 transition"
-          href="http://www.linkedin.com/in/eric-diaz-euka/"
-        >
-          <LinkedInIcon class="w-6 h-6" />LinkedIn</a
-        >
-        <a
-          target="_blank"
-          rel="noopener noreferrer"
-          class="rounded-xl border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:scale-110 hover:bg-white/10 transition"
-          href="https://github.com/Euka-e"
-        >
-          <GitHubIcon class="w-6 h-6" />GitHub</a
-        >
-        <a
-          target="_blank"
-          rel="noopener noreferrer"
-          class="rounded-xl border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:scale-110 hover:bg-white/10 transition"
-          href="https://github.com/Euka-e"
-        >
-          <MailIcon class="w-6 h-6" />ericdiazeuka@gmail.com</a
-        >
+        <SocialButton href="http://www.linkedin.com/in/eric-diaz-euka/">
+          <LinkedInIcon class="size-6" />
+          LinkedIn
+        </SocialButton>
+        <SocialButton href="https://github.com/Euka-e">
+          <GitHubIcon class="size-6" />
+          GitHub
+        </SocialButton>
+        <SocialButton href="">
+          <MailIcon class="size-6" />
+          ericdiazeuka@gmail.com
+        </SocialButton>
       </nav>
+      <Experience/>
     </main>
   </section>
 </Layout>
