--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,4 +1,4 @@
 <span
-  class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300"
+  class="bg-green-300 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300 hover:bg-green-900 dark:hover:bg-green-700 hover:text-green-100 dark:hover:text-green-100"
   ><slot /></span
 >
