--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,5 @@
-<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
-  <img
-    class="rounded-full w-12 h-12"
-    src="https://avatars.githubusercontent.com/u/91031571?s=400&u=384c47896fa89b09d88ecd3042b4cc893dd07aea&v=4"
-    alt="Eric photo"
-  />
+<header class="flex justify-center items-center py-3 w-[1120px] mx-auto">
+  <span></span>
 
   <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="/">Home</a>
