--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,16 +4,17 @@ import Header from "../components/Header.astro";
 
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
@@ -22,6 +23,16 @@ const { title } = Astro.props;
   <body>
     <Header />
     <slot />
+    <script>
+      window.addEventListener('wheel', (e) => {
+        e.preventDefault();
+        const scrollPosition = window.scrollY + (e.deltaY * 0.5);
+        window.scrollTo({
+          top: scrollPosition,
+          behavior: 'smooth'
+        });
+      });
+    </script>
   </body>
 </html>
 <style is:global>
@@ -30,14 +41,11 @@ const { title } = Astro.props;
   }
   html {
     font-family: "Geist Mono", sans-serif;
+    scroll-behavior: smooth;
   }
   body {
-    background: linear-gradient(
-      180deg,
-      #020021 0%,
-      #02001a 50%,
-      #080053 100%
-    );
+    background: linear-gradient(180deg, #020021 0%, #02001a 50%, #080053 100%);
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     height: 100vh;
