Experience refaction(in progress-icon)

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,28 +2,30 @@
 import ExperienceCard from "./ExperienceCard.astro";
 ---
 
-<ExperienceCard
-  technologies={["Node.js", "TypeScript", "Express", "TypeORM", "PostgreSQL"]}
-  title="Full-stack Web Developer"
-  company="Scrum LATAM"
-  dates="August 2024 - Present"
-  description="Developing Full-Stack Web Applications Using Technologies Such as Node.js, TypeScript, Express, TypeORM, and PostgreSQL."
-/>
+<div class="mt-10">
+  <ExperienceCard
+    technologies={["Node.js", "TypeScript", "Express", "TypeORM", "PostgreSQL"]}
+    title="Full-stack Web Developer"
+    company="Scrum LATAM"
+    dates="August 2024 - Present"
+    description="Developing Full-Stack Web Applications Using Technologies Such as Node.js, TypeScript, Express, TypeORM, and PostgreSQL."
+  />
 
-<ExperienceCard
-  technologies={[
-    "React",
-    "Express",
-    "Node.js",
-    "Nest.js",
-    "Next.js",
-    "Redux",
-    "PostgreSQL",
-    "MongoDB",
-    "TypeORM",
-  ]}
-  title="Teaching Assistant"
-  company="Henry"
-  dates="June 2024 - August 2024"
-  description="Assisting Students in Henry's Full Stack Web Development Career with Technical and/or Administrative Difficulties. Providing Tools to Resolve Technical Issues and Develop Soft Skills."
-/>
+  <ExperienceCard
+    technologies={[
+      "React",
+      "Express",
+      "Node.js",
+      "Nest.js",
+      "Next.js",
+      "Redux",
+      "PostgreSQL",
+      "MongoDB",
+      "TypeORM",
+    ]}
+    title="Teaching Assistant"
+    company="Henry"
+    dates="June 2024 - August 2024"
+    description="Assisting Students in Henry's Full Stack Web Development Career with Technical and/or Administrative Difficulties. Providing Tools to Resolve Technical Issues and Develop Soft Skills."
+  />
+</div>
