--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,7 +2,7 @@
 import ExperienceCard from "./ExperienceCard.astro";
 ---
 
-<div class="mt-10">
+<div >
   <ExperienceCard
     technologies={["Node.js", "TypeScript", "Express", "TypeORM", "PostgreSQL"]}
     title="Full-stack Web Developer"
