--- a/src/components/Pills.astro
+++ b/src/components/Pills.astro
@@ -5,16 +5,16 @@ import GitHubIcon from "../icons/GitHub.astro";
 import MailIcon from "../icons/Mail.astro";
 ---
 
-<nav class="flex flex-row gap-x-3">
+<nav class="flex justify-center flex-wrap gap-x-2">
     <SocialButton href="http://www.linkedin.com/in/eric-diaz-euka/">
-      <LinkedInIcon class="size-6" />
+      <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialButton>
     <SocialButton href="https://github.com/Euka-e">
       <GitHubIcon class="size-6" />
       GitHub
     </SocialButton>
-    <SocialButton href="">
+    <SocialButton href="https://mail.google.com/mail/?view=cm&fs=1&to=ericdiazeuka@gmail.com">
       <MailIcon class="size-6" />
       ericdiazeuka@gmail.com
     </SocialButton>
