--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Experience from "../components/Experience.astro";
 import Presentation from "../components/Presentation.astro";
 import Pills from "../components/Pills.astro";
 import SectionContainer from "../components/SectionContainer.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout
@@ -11,19 +13,23 @@ import SectionContainer from "../components/SectionContainer.astro";
   description="If you are looking for a full-stack and highly dedicated web developer and programmer to build your next project  or just want to say hi , you've come to the right place."
 >
   <main>
-    <SectionContainer class="py-40 pb-20">
+    <SectionContainer>
+      <Header />
+    </SectionContainer>
+
+    <SectionContainer class="sm:pt-28 pt-10 pb-20">
       <SectionContainer>
         <Presentation />
-      </SectionContainer>
-
-      <SectionContainer>
         <Pills />
       </SectionContainer>
 
-      <SectionContainer>
-        <h2 class="text-3xl font-bold mt-8 text-center">Proffesional Experience</h2>
+      <SectionContainer class="mt-20" id="experience">
+        <h2 class="text-3xl font-bold text-center">Proffesional Experience</h2>
         <Experience />
       </SectionContainer>
+    </SectionContainer>
+    <SectionContainer>
+      <Footer />
     </SectionContainer>
   </main>
 </Layout>
