--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,10 +13,9 @@ import Footer from "../components/Footer.astro";
   description="If you are looking for a full-stack and highly dedicated web developer and programmer to build your next project  or just want to say hi , you've come to the right place."
 >
   <main>
-    <SectionContainer>
+    <div class="flex justify-start items-center py-3 xl:w-[1120px] mx-auto gap-x-10">
       <Header />
-    </SectionContainer>
-
+    </div>
     <SectionContainer class="sm:pt-28 pt-10 pb-20">
       <SectionContainer>
         <Presentation />
