--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,12 @@
-<header class="flex justify-center items-center py-3 xl:w-[1120px] mx-auto gap-x-10">
+<header class="flex items-center py-3 xl:w-[1120px] mx-auto gap-x-10">
   <nav
-    class="flex flex-col md:flex-row gap-x-10 opacity-80 md:justify-between md:items-center"
+    class="flex flex-col md:flex-row gap-x-10 opacity-80 justify-start md:justify-center"
   >
     <input type="checkbox" id="menu-toggle" class="hidden" />
 
     <label
       for="menu-toggle"
-      class="md:hidden flex justify-center w-8 h-8 bg-gray-200 p-2 rounded"
+      class="md:hidden absolute top-3 left-3 flex justify-center w-8 h-8 p-2 rounded"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -23,7 +23,7 @@
       </svg>
     </label>
 
-    <div class="hidden md:block flex gap-x-10">
+    <div class="hidden sm:block flex gap-x-10">
       <a href="#start">Home</a>
       <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
@@ -33,20 +33,20 @@
 
     <div
       id="mobile-menu"
-      class="md:hidden flex flex-col bg-gray-200 p-4 rounded-md gap-x10"
+      class="sm:hidden flex flex-col p-4 rounded-md absolute top-16 left-3"
     >
-      <a href="#start">Home</a>
-      <a href="#experience">Experience</a>
-      <a href="#projects">Projects</a>
-      <a href="#about-me">About me</a>
-      <a href="#contact">Contact</a>
+      <a href="#start" class="block">Home</a>
+      <a href="#experience" class="block">Experience</a>
+      <a href="#projects" class="block">Projects</a>
+      <a href="#about-me" class="block">About me</a>
+      <a href="#contact" class="block">Contact</a>
     </div>
 
     <style>
       #mobile-menu {
         display: none;
       }
-      #menu-toggle:checked + label + div {
+      #menu-toggle:checked ~ #mobile-menu {
         display: block;
       }
     </style>
