--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -3,7 +3,7 @@ const { technologies, title, company, dates, description } = Astro.props;
 ---
 
 <div
-  class="mt-4 max-w-[740px] min-w-[300px] px-4 py-3 rounded-lg flex flex-col bg-slate-900"
+  class="mt-4 max-w-[740px] min-w-[300px] px-4 py-3 rounded-lg flex flex-col mx-auto bg-slate-900"
 >
   <h3 class="text-lg font-bold mb-2">{title}</h3>
   <p class="text-white-600 mb-1">{company}</p>
