--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="flex items-center py-3 xl:w-[1120px] mx-auto gap-x-10">
   <nav
-    class="flex flex-col md:flex-row gap-x-10 opacity-80 justify-start md:justify-center"
+    class="flex flex-col md:flex-row gap-x-10 opacity-80 justify-start md:justify-center fixed top-0 left-0 right-0 z-50"
   >
     <input type="checkbox" id="menu-toggle" class="hidden" />
 
@@ -23,7 +23,7 @@
       </svg>
     </label>
 
-    <div class="hidden sm:block flex gap-x-10">
+    <div class="hidden md:block flex gap-x-10 md:flex md:justify-center mt-4">
       <a href="#start">Home</a>
       <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
@@ -33,13 +33,13 @@
 
     <div
       id="mobile-menu"
-      class="sm:hidden flex flex-col p-4 rounded-md absolute top-16 left-3"
+      class="sm:hidden flex flex-col p-0 m-0 absolute top-16 left-0 right-0 w-full bg-lightblue z-50 text-black font-bold"
     >
-      <a href="#start" class="block">Home</a>
-      <a href="#experience" class="block">Experience</a>
-      <a href="#projects" class="block">Projects</a>
-      <a href="#about-me" class="block">About me</a>
-      <a href="#contact" class="block">Contact</a>
+      <a href="#start" class="block p-4 text-center border-b ">Home</a>
+      <a href="#experience" class="block p-4 text-center border-b">Experience</a>
+      <a href="#projects" class="block p-4 text-center border-b">Projects</a>
+      <a href="#about-me" class="block p-4 text-center border-b">About me</a>
+      <a href="#contact" class="block p-4 text-center border-b">Contact</a>
     </div>
 
     <style>
@@ -48,6 +48,11 @@
       }
       #menu-toggle:checked ~ #mobile-menu {
         display: block;
+      }
+      @media (max-width: 767px) {
+        .hidden-sm-block {
+          display: none;
+        }
       }
     </style>
   </nav>
