--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="flex items-center py-3 xl:w-[1120px] mx-auto gap-x-10">
   <nav
-    class="flex flex-col md:flex-row gap-x-10 opacity-80 justify-start md:justify-center fixed top-0 left-0 right-0 z-50"
+    class="flex flex-col md:flex-row gap-x-10 justify-start md:justify-center fixed top-0 left-0 right-0 z-50"
   >
     <input type="checkbox" id="menu-toggle" class="hidden" />
 
@@ -23,10 +23,11 @@
       </svg>
     </label>
 
-    <div class="hidden md:block flex gap-x-10 md:flex md:justify-center mt-4">
+    <div class="hidden md:block flex gap-x-10 md:flex md:justify-center p-4 bg-[#020021] text-white font-bold text-lg w-full">
       <a href="#start">Home</a>
       <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
+      <a href="#technologies">Technologies</a>
       <a href="#about-me">About me</a>
       <a href="#contact">Contact</a>
     </div>
@@ -38,6 +39,7 @@
       <a href="#start" class="block p-4 text-center border-b ">Home</a>
       <a href="#experience" class="block p-4 text-center border-b">Experience</a>
       <a href="#projects" class="block p-4 text-center border-b">Projects</a>
+      <a href="#technologies" class="block p-4 text-center border-b">Technologies</a>
       <a href="#about-me" class="block p-4 text-center border-b">About me</a>
       <a href="#contact" class="block p-4 text-center border-b">Contact</a>
     </div>
