Projects section added and section routing fixed

--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -14,7 +14,7 @@ import ScrumIcon from "../icons/technologies/scrum.astro";
 import AstroIcon from "../icons/technologies/astro.astro";
 ---
 
-<section class="w-full mx-auto lg:w-[740px]" id="technologies">
+<section class="w-full mx-auto lg:w-[740px] pt-20" id="technologies">
   <h2 class="text-3xl font-bold text-center">Technologies</h2>
   <ul class="flex flex-wrap justify-center mb-2 gap-4 px-7 mt-8">
     {
