--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import SectionContainer from "../components/SectionContainer.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Technologies from "../components/Technologies.astro";
+import Projects from "../components/projects/Projects.astro";
 ---
 
 <Layout
@@ -14,7 +15,10 @@ import Technologies from "../components/Technologies.astro";
   description="If you are looking for a full-stack and highly dedicated web developer and programmer to build your next project  or just want to say hi , you've come to the right place."
 >
   <main>
-    <div class="flex justify-start items-center py-3 xl:w-[1120px] mx-auto gap-x-10" id="start">
+    <div
+      class="flex justify-start items-center py-3 xl:w-[1120px] mx-auto gap-x-10"
+      id="start"
+    >
       <Header />
     </div>
     <SectionContainer class="sm:pt-28 pt-10 pb-20">
@@ -23,14 +27,17 @@ import Technologies from "../components/Technologies.astro";
         <Pills />
       </SectionContainer>
 
-      <SectionContainer class="mt-20">
+      <SectionContainer >
         <Experience />
       </SectionContainer>
 
-      <SectionContainer class="mt-20">
-        <Technologies/>
+      <SectionContainer>
+        <Technologies />
       </SectionContainer>
 
+      <SectionContainer>
+        <Projects />
+      </SectionContainer>
     </SectionContainer>
     <!-- <SectionContainer>
       <Footer />
